# ioboard

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  package.xml
msg/: IOFromBoard.msg  IOToBoard.msg
src/: Atmega32u4Hardware.h  IOBoard.cpp  Makefile  avr_chatter.cpp  io_from_board.h  io_to_board.h  testboard.cpp
src/ros_lib/: ArduinoHardware.h
src/ros_lib/EposManager/: EPOSControl.h  GroupEPOSControl.h  GroupMotorInfo.h  MotorInfo.h
src/ros_lib/bbcontrol/: Rake.h  TwistWithID.h
src/ros_lib/localization/: scan_point.h  scan_vector.h  xy_point.h  xy_vector.h
